Bug #19651 State of restore using NDB restore is unknown due to error 1221
Submitted: 9 May 2006 20:34 Modified: 2 Nov 2006 6:28
Reporter: Jonathan Miller
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:4.1 -> OS:Linux (Linux 32 Bit OS)
Assigned to: david li Target Version:

[9 May 2006 20:34] Jonathan Miller
Description:
In trying to recover from 19645 I did a backup, shutdown the cluster, restart all data
nodes with --initial. During the restore the error Temporary error: 1221: REDO buffers
overloaded, consult online manual (increase RedoBuffer) start showing up. The restore
completed and stated ok, but is it? How does a user know for sure that everything is okay,
or if they have issues?

Nodeid = 2
Backup Id = 1
backup path = ./BACKUP/BACKUP-1/
Ndb version in backup files: Version 5.1.10
Connected to ndb!!
Successfully restored table dbt2/def/stock
Successfully restored table event REPL$dbt2/stock
Successfully restored table dbt2/def/new_order
Successfully restored table event REPL$dbt2/new_order
Successfully restored table dbt2/def/warehouse
Successfully restored table event REPL$dbt2/warehouse
Successfully restored table dbt2/def/customer
Successfully restored table event REPL$dbt2/customer
Successfully restored table dbt2/def/item
Successfully restored table event REPL$dbt2/item
Successfully restored table dbt2/def/order_line
Successfully restored table event REPL$dbt2/order_line
Successfully restored table dbt2/def/history
Successfully restored table event REPL$dbt2/history
Successfully restored table dbt2/def/orders
Successfully restored table event REPL$dbt2/orders
Successfully restored table dbt2/def/district
Successfully restored table event REPL$dbt2/district
Successfully created index PRIMARY on item
Successfully created index PRIMARY on new_order
Successfully created index PRIMARY on stock
Successfully created index PRIMARY on orders
Successfully created index PRIMARY on order_line
Successfully created index PRIMARY on district
Successfully created index PRIMARY on warehouse
Successfully created index PRIMARY on customer
_____________________________________________________
Processing data in table: cluster/def/NDB$BLOB_2_3(3) fragment 0
_____________________________________________________
Processing data in table: dbt2/def/stock(5) fragment 0
_____________________________________________________
Processing data in table: dbt2/def/new_order(13) fragment 0
_____________________________________________________
Processing data in table: sys/def/NDB$EVENTS_0(1) fragment 0
_____________________________________________________
Processing data in table: dbt2/def/warehouse(21) fragment 0
_____________________________________________________
Processing data in table: dbt2/def/customer(16) fragment 0
_____________________________________________________
Processing data in table: dbt2/def/item(7) fragment 0
_____________________________________________________
Processing data in table: dbt2/def/order_line(9) fragment 0
_____________________________________________________
Processing data in table: cluster/def/schema(2) fragment 0
_____________________________________________________
Processing data in table: cluster/def/apply_status(4) fragment 0
_____________________________________________________
Processing data in table: dbt2/def/history(15) fragment 0
_____________________________________________________
Processing data in table: dbt2/def/orders(11) fragment 0
_____________________________________________________
Processing data in table: sys/def/SYSTAB_0(0) fragment 0
_____________________________________________________
Processing data in table: dbt2/def/NDB$BLOB_16_20(17) fragment 0
Temporary error: 1221: REDO buffers overloaded, consult online manual (increase
RedoBuffer)
Temporary error: 1221: REDO buffers overloaded, consult online manual (increase
RedoBuffer)
Temporary error: 1221: REDO buffers overloaded, consult online manual (increase
RedoBuffer)
Temporary error: 1221: REDO buffers overloaded, consult online manual (increase
RedoBuffer)
Temporary error: 1221: REDO buffers overloaded, consult online manual (increase
RedoBuffer)
Temporary error: 1221: REDO buffers overloaded, consult online manual (increase
RedoBuffer)
Temporary error: 1221: REDO buffers overloaded, consult online manual (increase
RedoBuffer)
Temporary error: 1221: REDO buffers overloaded, consult online manual (increase
RedoBuffer)
Temporary error: 1221: REDO buffers overloaded, consult online manual (increase
RedoBuffer)
Temporary error: 1221: REDO buffers overloaded, consult online manual (increase
RedoBuffer)
Temporary error: 1221: REDO buffers overloaded, consult online manual (increase
RedoBuffer)
Temporary error: 1221: REDO buffers overloaded, consult online manual (increase
RedoBuffer)
Temporary error: 1221: REDO buffers overloaded, consult online manual (increase
RedoBuffer)
Temporary error: 1221: REDO buffers overloaded, consult online manual (increase
RedoBuffer)
Temporary error: 1221: REDO buffers overloaded, consult online manual (increase
RedoBuffer)
Temporary error: 1221: REDO buffers overloaded, consult online manual (increase
RedoBuffer)
Temporary error: 1221: REDO buffers overloaded, consult online manual (increase
RedoBuffer)
Temporary error: 1221: REDO buffers overloaded, consult online manual (increase
RedoBuffer)
Temporary error: 1221: REDO buffers overloaded, consult online manual (increase
RedoBuffer)
Temporary error: 1221: REDO buffers overloaded, consult online manual (increase
RedoBuffer)
Temporary error: 1221: REDO buffers overloaded, consult online manual (increase
RedoBuffer)
_____________________________________________________
Processing data in table: dbt2/def/district(19) fragment 0
Restored 1191894 tuples and 0 log entries

NDBT_ProgramExit: 0 - OK

How to repeat:
N/A

Suggested fix:
If ndb restore recovered from the errors is should state that it recoverd. 
NDBT_ProgramErrors: Recovered From Temp Errors
NDBT_ProgramExit: 0 - OK

Or 

NDBT_ProgramErrors:  Unable to recovered From Temp Errors
NDBT_ProgramExit: 1 - Errors
[9 May 2006 20:55] Jonas Oreland
It went ok, but you should look at your redolog buffer as suggested by message.
It could also be that your disk are slow so that writing to the redolog is slow.

If it fail it will say 
<quote from code>
	  err << "Restore: Failed to restore table: ";
          err << metaData[i]->getTableName() << " ... Exiting " << endl;
	  exitHandler(NDBT_FAILED);
</quoto from code>

Maybe jon can add a note about that ndb_restore will print 
  any temporary error that it encounters. And that it will be explicit if it fails.

Or do you think it should print something like
"Restore successful, but encountered temporary error, please look at configuration..."
[9 May 2006 21:02] Jonathan Miller
Hi,

I would really like to implement both of your suggestions if possible.

Thanks,
[20 Sep 2006 3:46] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/12249

ChangeSet@1.2534, 2006-09-20 09:48:06+08:00, dli@dev3-76.dev.cn.tlan +3 -0
  fix for bug#19651, if temporary error occured while retoring, report it in the restore
result.
[26 Sep 2006 5:02] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/12508

ChangeSet@1.2534, 2006-09-26 11:03:11+08:00, dli@dev3-76.dev.cn.tlan +4 -0
  fix for bug#19651, if temporary error occured while retoring, report it in the restore
result.
[10 Oct 2006 20:28] Jonas Oreland
pushed into 5.1.12
[1 Nov 2006 15:25] Jonas Oreland
pushed into 4.1.22
[1 Nov 2006 15:34] Jonas Oreland
pushed into 5.0.29
[2 Nov 2006 6:28] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix for 4.1.22, 5.0.29, 5.1.12.
[4 Nov 2006 4:10] Jon Stephens
*Fix for 5.0 documented in 5.0.30 Release Notes.*