fix for bug#19651, if temporary error occured while retoring, report it in the restore result.